--- a/views/authentication/signIn.ejs
+++ b/views/authentication/signIn.ejs
@@ -51,13 +51,30 @@
               <div class="d-flex align-items-center justify-content-between mb-3">
                 <h3>Sign In</h3>
               </div>
-              <form>
+              <% if (typeof message !== 'undefined') { %>
+                <p><%= message %></p>
+              <% } %>
+              <form method="post" action="/member/signIn">
                 <div class="form-floating mb-3">
-                  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" />
-                  <label for="floatingInput">Email address</label>
+                  <input
+                    name="username"
+                    type="text"
+                    class="form-control"
+                    id="floatingInput"
+                    placeholder="name@example.com"
+                    required
+                  />
+                  <label for="floatingInput">Username</label>
                 </div>
                 <div class="form-floating mb-4">
-                  <input type="password" class="form-control" id="floatingPassword" placeholder="Password" />
+                  <input
+                    name="password"
+                    type="password"
+                    class="form-control"
+                    id="floatingPassword"
+                    placeholder="Password"
+                    required
+                  />
                   <label for="floatingPassword">Password</label>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mb-4">
