--- a/views/authentication/signUp.ejs
+++ b/views/authentication/signUp.ejs
@@ -50,21 +50,63 @@
               <div class="d-flex align-items-center justify-content-between mb-3">
                 <h3>Sign Up</h3>
               </div>
-              <form>
+              <% if (typeof message !== 'undefined') { %>
+                <p><%= message %></p>
+              <% } %>
+              <form method="POST" action="/member/signUp">
                 <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="floatingText" placeholder="jhondoe" />
+                  <input
+                    name="username"
+                    type="text"
+                    class="form-control"
+                    id="floatingText"
+                    placeholder="jhondoe"
+                    required
+                  />
                   <label for="floatingText">User Name</label>
                 </div>
                 <div class="form-floating mb-3">
-                  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" />
+                  <input
+                    name="fullName"
+                    type="text"
+                    class="form-control"
+                    id="floatingInput"
+                    placeholder="Your Name"
+                    required
+                  />
+                  <label for="floatingInput">Full Name</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input
+                    name="imageUrl"
+                    type="text"
+                    class="form-control"
+                    id="floatingInput"
+                    placeholder="name@example.com"
+                    required
+                  />
                   <label for="floatingInput">Image URL</label>
                 </div>
                 <div class="form-floating mb-4">
-                  <input type="password" class="form-control" id="floatingPassword" placeholder="Password" />
+                  <input
+                    name="password"
+                    type="password"
+                    class="form-control"
+                    id="floatingPassword"
+                    placeholder="Password"
+                    required
+                  />
                   <label for="floatingPassword">Password</label>
                 </div>
                 <div class="form-floating mb-4">
-                  <input type="password" class="form-control" id="floatingPassword" placeholder="Password" />
+                  <input
+                    name="confirm"
+                    type="password"
+                    class="form-control"
+                    id="floatingPassword"
+                    placeholder="Confirm Your Password"
+                    required
+                  />
                   <label for="floatingPassword">Confirm Your Password</label>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mb-4">
