--- a/views/dashboard/home.ejs
+++ b/views/dashboard/home.ejs
@@ -1,34 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <title><%= title %></title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
-    <!-- Favicon -->
-    <link href="/img/favicon.ico" rel="icon">
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap" rel="stylesheet">
-    
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="/css/style.css" rel="stylesheet">
+    <%- include('../components/header') %>
 </head>
 
 <body>
@@ -48,20 +21,10 @@
                 <a href="index.html" class="navbar-brand mx-4 mb-3">
                     <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>DASHMIN</h3>
                 </a>
-                <div class="d-flex align-items-center ms-4 mb-4">
-                    <div class="position-relative">
-                        <img class="rounded-circle" src="/img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                        <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
-                    </div>
-                    <div class="ms-3">
-                        <h6 class="mb-0">Jhon Doe</h6>
-                        <span>Admin</span>
-                    </div>
-                </div>
                 <div class="navbar-nav w-100">
                     <a href="index.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Courses</a>
+                        <a href="#" class="nav-link" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Courses</a>
                         <div class="dropdown-menu bg-transparent border-0">
                             <a href="" class="dropdown-item">Buttons</a>
                             <a href="" class="dropdown-item">Typography</a>
@@ -77,27 +40,25 @@
         <!-- Content Start -->
         <div class="content">
             <!-- Navbar Start -->
-            <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
+            <nav class=" justify-content-between navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
                 <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
                     <h2 class="text-primary mb-0"><i class="fa fa-hashtag"></i></h2>
                 </a>
                 <a href="#" class="sidebar-toggler flex-shrink-0">
                     <i class="fa fa-bars"></i>
                 </a>
-                <form class="d-none d-md-flex ms-4">
-                    <input class="form-control border-0" type="search" placeholder="Search">
+                <form class="d-none d-md-flex ms-4 w-75">
+                    <input class="form-control border-0 w-100" type="search" placeholder="Search">
                 </form>
                 <div class="navbar-nav align-items-center ms-auto">
                     
                     
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <img class="rounded-circle me-lg-2" src="/img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                            <span class="d-none d-lg-inline-flex">John Doe</span>
+                        <a href="#" class="nav-link" data-bs-toggle="dropdown">
+                            <img class="rounded-circle me-lg-2" src="https://scontent.fhan3-1.fna.fbcdn.net/v/t39.30808-6/273280810_3317577035194696_6778832758339916691_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=efb6e6&_nc_eui2=AeFOGuvJUZQAhZ9HpuX9vN7iTXzBYCKd98VNfMFgIp33xYacfQASpG-KhZ0cAbKLt7KAfIVim6CVX-dVgIKhCcx3&_nc_ohc=dZbg9IWFPOEAX9rEnFH&_nc_ht=scontent.fhan3-1.fna&oh=00_AfCyra36p8EC83gOvingtRuwBjsyje4EePafrkxYvXXDlA&oe=65EA4AD7" alt="" style="width: 40px; height: 40px;">
+                            <span class="d-none d-lg-inline-flex">Nguyen Trung Kien</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                            <a href="#" class="dropdown-item">My Profile</a>
-                            <a href="#" class="dropdown-item">Settings</a>
                             <a href="/member/logout" class="dropdown-item">Log Out</a>
                         </div>
                     </div>
@@ -151,6 +112,13 @@
                     </div>
                     <div class="table-responsive">
                         <table class="table text-start align-middle table-bordered table-hover mb-0">
+                            <% if (typeof messageFail !== 'undefined') { %>
+                                <p style="color: brown;"><%= messageFail %></p>
+                              <% } %>
+
+                              <% if (typeof messageSuccess !== 'undefined') { %>
+                                <p style="color: green;"><%= messageSuccess %></p>
+                              <% } %>
                             <thead>
                                 <tr class="text-dark">
                                     <th scope="col">Section Name</th>
@@ -162,81 +130,97 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <% sections.forEach(section => { %>
+                                <% sections.forEach((section, index) => { %>
                                     <tr>
                                         <td><%= section.sectionName %></td>
                                         <td><%= section.sectionDescription %></td>
                                         <td><%= section.duration %></td>
                                         <td><%= section.isMainTask ? 'Yes' : 'No' %></td>
                                         <td><%= section.course.courseName %></td>
-                                        <td style="display: flex;">
-                                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#<%=section._id%>">
-                                                details
+                                        <td style="display: flex; justify-content: space-between;">
+                                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#<%= index %>modify"><i class="bi bi-eye-fill"></i></button>
+                                            <button type="button" class="btn btn-danger" data-target="#<%= index %>delete" data-toggle="modal" data-target="#exampleModal">
+                                            <i class="bi bi-trash2-fill"></i>
                                               </button>
-                                            <a class="btn btn-danger" style="margin: 5px;" href="">Delete</a>
                                         </td>
                                     </tr>
+                                
+                                    <!-- For Modify -->
+                                    <div class="modal fade bd-example-modal-lg" id="<%= index %>modify" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog modal-lg">
+                                          <div class="modal-content">
+                                            <div>   
+                                                <h3>Information</h3>
+                                            </div>
+                                            <div class="p-5 w-100 m-3" style="display: flex; justify-content: space-between;">
+                                                <div style="display: flex; justify-content: center; align-items: center;">
+                                                    <div class="card" style="width: 18rem;">
+                                                        <img class="card-img-top" src="<%= section.course.courseImage %>" alt="Card image cap">
+                                                        <div class="card-body">
+                                                            <h5 class="card-title"><%= section.course.courseName %></h5>
+                                                            <p class="card-text"><%= section.course.courseDescription %></p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="w-100 p-4">
+                                                    <h4>Section</h4>
+                                                    <form method="post" action="/section/update" >
+                                                        <input name="sectionId" type="hidden" value="<%= section._id %>">
+                                                        <div class="form-group">
+                                                          <label  for="sectionName">Section Name</label>
+                                                          <input type="text" value="<%= section.sectionName %>" class="form-control" name="sectionName" placeholder="Enter section name">
+                                                        </div>
+                                                        <div class="form-group">
+                                                          <label for="sectionDescription">Section Description</label>
+                                                          <textarea name="sectionDescription" class="form-control" id="exampleFormControlTextarea1" rows="4"><%= section.sectionDescription %></textarea>
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label  for="sectionName">Section Duration</label>
+                                                            <input type="number" value="<%= section.duration %>" class="form-control" name="duration" placeholder="Enter duration">
+                                                        </div>
+                                                        
+                                                        <select name="course" class="form-control mt-3 mb-3">
+                                                            <% courses.forEach(course => { %>
+                                                                <option <% if (section.course._id.toString() === course._id.toString()) { %> selected <% } %> value="<%= course._id %>"><%= course.courseName %></option>
+                                                            <% }); %>
+                                                        </select>                                                    
+                                                        <button type="submit" class="btn btn-primary">Update Section</button>
+                                                      </form>
+                                                </div>
+                                            </div>                                            
+                                          </div>
+                                        </div>
+                                      </div>
 
-                                    <div class="modal fade" id="<%=section._id%>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+
+
+                                      <!-- for Delete -->
+                                      <div class="modal fade" id="<%= index %>delete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                         <div class="modal-dialog" role="document">
                                           <div class="modal-content">
                                             <div class="modal-header">
-                                              <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                                              <h5 class="modal-title" id="exampleModalLabel">Delete Section</h5>
                                               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                 <span aria-hidden="true">&times;</span>
                                               </button>
                                             </div>
                                             <div class="modal-body">
-                                              ...
+                                              <h6>Confirm Delete Section <%= section.sectionName %></h6>
                                             </div>
                                             <div class="modal-footer">
-                                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                              <button type="button" class="btn btn-primary">Save changes</button>
+                                              <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                                              <button type="button" class="btn btn-primary">Yes</button>
                                             </div>
                                           </div>
                                         </div>
                                       </div>
                                 <% }); %>
+                                
                             </tbody>
                         </table>
                     </div>
                 </div>
             </div>
-            <!-- Recent Sales End -->
-
-            <!-- Sales Chart Start -->
-            <!-- <div class="container-fluid pt-4 px-4">
-                <div class="row g-4">
-                    <div class="col-sm-12 col-xl-6">
-                        <div class="bg-light text-center rounded p-4">
-                            <div class="d-flex align-items-center justify-content-between mb-4">
-                                <h6 class="mb-0">Worldwide Sales</h6>
-                                <a href="">Show All</a>
-                            </div>
-                            <canvas id="worldwide-sales"></canvas>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-xl-6">
-                        <div class="bg-light text-center rounded p-4">
-                            <div class="d-flex align-items-center justify-content-between mb-4">
-                                <h6 class="mb-0">Salse & Revenue</h6>
-                                <a href="">Show All</a>
-                            </div>
-                            <canvas id="salse-revenue"></canvas>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-            <!-- Sales Chart End -->
-
-
-           
-
-
-            <!-- Widgets Start -->
-      
-            <!-- Widgets End -->
-
 
             <!-- Footer Start -->
             <div class="container-fluid pt-4 px-4">
@@ -263,19 +247,8 @@
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/lib/chart/chart.min.js"></script>
-    <script src="/lib/easing/easing.min.js"></script>
-    <script src="/lib/waypoints/waypoints.min.js"></script>
-    <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <%- include('../components/footer') %>
 
-    <!-- Template Javascript -->
-    <script src="/js/main.js"></script>
 </body>
 
 </html>
